--- a/styles.css
+++ b/styles.css
@@ -16,17 +16,16 @@ body {
 .months {
     display: flex;
     justify-content: space-between;
-    width: 730px;
-    padding-left: 53px;
+    padding-left: 20px; /* 为星期标签留出空间 */
     margin-bottom: 5px;
 }
 
 .months div {
-    flex: 1;
-    text-align: left;
-    font-weight: bold;
-    padding: 5px 0;
-    color: #586069;
+    width: calc((100% - 20px) / 12); /* 12个月份，减去左侧padding */
+    text-align: center;
+    font-size: 12px; /* 与星期字体大小一致 */
+    font-weight: normal; /* 确保字体不加粗 */
+    color: #767676; /* 与星期字体颜色一致 */
 }
 
 .content {
@@ -37,15 +36,19 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 90px;
-    padding-right: 10px;
-    text-align: right;
+    padding-top: 20px; /* 为月份标签留出空间 */
+    margin-right: 5px;
+}
+
+.weekdays div {
+    height: 15px;
     font-size: 12px;
-    color: #586069;
+    color: #767676;
 }
 
 .weeks {
     display: flex;
+    flex-grow: 1;
 }
 
 .week {
@@ -54,9 +57,9 @@ body {
 }
 
 .day {
-    width: 12px;
-    height: 12px;
-    margin: 1px;
+    width: 10px;
+    height: 10px;
+    margin: 2px;
     background-color: #ebedf0;
     border-radius: 2px;
     position: relative;
