--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-
 body {
     font-family: Arial, sans-serif;
     display: flex;
@@ -37,7 +36,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding-top: 20px; /* 为月份标签留出空间 */
+    padding-top: 0px; /* 为月份标签留出空间 */
     margin-right: 5px;
 }
 
@@ -45,6 +44,8 @@ body {
     height: 15px;
     font-size: 12px;
     color: #767676;
+    margin-top: -0.8px; /* 增加这一行 */
+    margin-bottom: 0px; /* 增加这一行 */
 }
 
 .weeks {
