--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-
 body {
     font-family: Arial, sans-serif;
     display: flex;
@@ -130,3 +129,11 @@ body {
 .legend-square[data-level="2"] { background-color: #74c967; }
 .legend-square[data-level="3"] { background-color: #309f46; }
 .legend-square[data-level="4"] { background-color: #1b662a; }
+
+.stats-container {
+    font-size: 12px; /* 调整为与月份标签相同的大小 */
+    color: #767676; /* 使用与月份标签相似的颜色 */
+    margin-top: 0 1px; /* 在日历方格和统计信息之间添加一些间距 */
+    text-align: left; /* 左对齐文本 */
+    padding-left: 10px; /* 添加一些左侧填充，使其与日历方格对齐 */
+}
