--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@ body {
     margin: 0;
     padding: 0;
     background-color: #ffffff;
+    padding-top: 50px; /* 根据需要调整这个值 */
 }
 
 .calendar {
@@ -169,7 +170,7 @@ body {
     }
 
     .legend-square {
-·        width: 8px;
+        width: 8px;
         height: 8px;
     }
 }
