--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-
 body {
     font-family: Arial, sans-serif;
     display: flex;
@@ -12,10 +11,12 @@ body {
 }
 
 .calendar {
+    position: relative;
     display: flex;
     flex-direction: column;
     width: 100%;
     max-width: 1200px; /* 限制最大宽度 */
+    padding-top: 40px; /* 为统计信息留出空间 */
 }
 
 .months {
@@ -138,11 +139,13 @@ body {
 .legend-square[data-level="4"] { background-color: #1b662a; }
 
 .stats-container {
-    font-size: 12px; /* 调整为与月份标签相同的大小 */
-    color: #050505; /* 使用与月份标签相似的颜色 */
-    margin-top: -15px; /* 在日历方格和统计信息之间添加一些间距 */
-    text-align: left; /* 左对齐文本 */
-    padding-left: 30px; /* 添加一些左侧填充，使其与日历方格对齐 */
+    font-size: 15px;
+    color: #309f46;
+    position: absolute;
+    top: 15px;
+    left: 0;
+    padding: 10px;
+    z-index: 1;
 }
 
 .container {
